# phobia

./: Cargo.toml  README.md
src/: event.rs  generator.rs  lib.rs
tests/data/: data.json  generate.py  parse.py  test_data.json  test_data.yaml
