[package]
name = "phobia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "phobia"
path = "src/bin/phobia.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version="1", features = ["derive"] }
tracing-subscriber = "0.1"
tracing = "0.1"
serde_json = "1"
structopt = "0.3"
