[package]
name = "phobia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "phobia"
path = "src/bin/phobia.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs"] }
serde = { version="1", features = ["derive"] }
tracing-subscriber = "0.1"
tracing = "0.1"
serde_json = "1"
structopt = "0.3"
reqwest = { version = "0.11", features = ["json", "multipart"] }
infer = { version = "0.3", default-features = false }

[dev-dependencies]
httpmock = "0.6"
